# SO1_2S2024_202112030

./: Proyecto1.txt  README.md
Hoja de Trabajo/: Deployment.yaml  Dockerfile  Ingress.yaml  Service.yaml  go.mod  main.go
Hoja de Trabajo/Locust/: Trafico.py  data.json
Proyecto1/: Prueba.sh  README.md
Proyecto1/Docker/: Create.sh  CreateCronjob.sh  Cronjob.sh
Proyecto1/Docker/High-cpu/: dockerfile  high-cpu  high-cpu.py
Proyecto1/Docker/High-ram/: dockerfile  high-ram  high-ram.py
Proyecto1/Docker/Low-cpu/: dockerfile  low-cpu  low-cpu.py
Proyecto1/Docker/Low-ram/: dockerfile  low-ram  low-ram.py
Proyecto1/Module/: .Module.symvers.cmd  .main.ko.cmd  .main.mod.cmd  .main.mod.o.cmd  .main.o.cmd  .modules.order.cmd  Run.sh  main.c  main.ko  main.mod.c  modules.order
Proyecto1/Service/: Cargo.toml
Proyecto1/Service/src/: main  main.rs
Proyecto2/: Readme.md  data_student.json  images.sh
Proyecto2/Agronomia/: dockerfile  go.mod  go.sum  main.go
Proyecto2/Disciplinas/: go.mod  go.sum  main.go
Proyecto2/Ingenieria/: Cargo.toml  Dockerfile  dockerfile
Proyecto2/Ingenieria/proto/: student.proto
Proyecto2/Ingenieria/src/: main.rs
Proyecto2/K8S/: apply.sh  disciplinas.yaml  get.sh  goclient.yaml  goserver.yaml  ingress.yaml  kubectl.sh  prueba.yaml  rustclient.yaml
Proyecto2/Locust/: locustfile.py
Proyecto2/Server/: Dockerfile  go.mod  main.go
Tarea1/: README.md  main  main.c
Tarea2/: README.md
Tareas/Tarea1/: Run.sh
Tareas/Tarea2/: README.md  Tarea2.sh
Tareas/Tarea3/: README  T3.rs
Test/: dockerfile  main.py
(+6 files in other folders)
