[package]
name = "grpc-client"
version = "0.1.0"
edition = "2021"

[[bin]] # Para retornar el gRPC server
name = "studentgrpc-server"
path = "src/server.rs"

[[bin]] # Para retornar el gRPC client
name = "studentgrpc-client"
path = "src/client.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}

[build-dependencies]
tonic-build ="0.12"